CSS mobile fix; SEO copy update
Trying to fix misaligned email bar in mobile. Also refined and
optimized copy for SEO. v1

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1656,7 +1656,6 @@
 		#signup-form input[type="password"],
 		#signup-form input[type="email"] {
 			width: 70%;
-			float:left;
 		}
 
 		#signup-form > * {
